INTYG-5673: Gjort om till elementdirektiv samt rensat bort extraKompletteringar som ej längre behövs

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/arendeListUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/arendeListUtkast.html
@@ -27,7 +27,7 @@
         <!-- list of open arenden -->
         <div ng-repeat="arendeListItem in arendeList | filter:kompletteringarFilter | filter:openArendenFilter | orderBy:'senasteHandelse':true"
              class="arende-item">
-          <div arende-panel-utkast panel-id="unhandled" arende-list-item="arendeListItem" arende-list="arendeList" parent-view-state="viewState"></div>
+          <arende-panel-utkast panel-id="unhandled" arende-list-item="arendeListItem" arende-list="arendeList" parent-view-state="viewState"></arende-panel-utkast>
         </div>
 
       </div>
