--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.directive.html
@@ -1,7 +1,9 @@
-<div class="card">
-  <wc-alert-message
-      alert-severity="warning"
-      ng-if="showFortsattUtkastWarning()">Det finns redan en påbörjad komplettering. <a id="komplettera-open-utkast"
-       ng-href="#/{{intygType}}/edit/{{intygId}}/">Öppna utkastet</a>
-  </wc-alert-message>
+<div>
+  <div class="card"
+       ng-if="showFortsattUtkastWarning()">
+    <wc-alert-message
+        alert-severity="warning">Det finns redan en påbörjad komplettering. <a id="komplettera-open-utkast"
+         ng-href="#/{{intygType}}/edit/{{intygId}}/">Öppna utkastet</a>
+    </wc-alert-message>
+  </div>
 </div>
