--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/paminnelse/arendePaminnelsePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/paminnelse/arendePaminnelsePanel.directive.html
@@ -2,9 +2,9 @@
 
   <div ng-class="{'panel-container': true, 'revoked-certificate' : parentViewState.intygProperties.isRevoked}">
 
-    <div arende-paminnelse-panel-header arende-list-item="arendeListItem" parent-view-state="parentViewState"></div>
+    <arende-paminnelse-panel-header arende-list-item="arendeListItem" parent-view-state="parentViewState"></arende-paminnelse-panel-header>
 
-    <div arende-panel-fraga arende-list-item="arendeListItem" panel-id="panelId" parent-view-state="parentViewState"></div>
+    <arende-panel-fraga arende-list-item="arendeListItem" panel-id="panelId" parent-view-state="parentViewState"></arende-panel-fraga>
 
   </div>
 
