--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanelUtkast.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanelUtkast.directive.html
@@ -6,24 +6,12 @@
 
       <!-- list of paminnelser -->
       <div ng-repeat="paminnelse in arendeListItem.arende.paminnelser | orderBy:'senasteHandelse':true">
-        <div arende-paminnelse-panel panel-id="panelId" paminnelse="paminnelse" parent-view-state="parentViewState"></div>
+        <arende-paminnelse-panel panel-id="panelId" paminnelse="paminnelse" parent-view-state="parentViewState"></arende-paminnelse-panel>
       </div>
 
-      <div arende-panel-header-utkast arende-list="arendeList" arende-list-item="arendeListItem" parent-view-state="parentViewState"></div>
+      <arende-panel-header-utkast arende-list="arendeList" arende-list-item="arendeListItem" parent-view-state="parentViewState"></arende-panel-header-utkast>
 
-      <div arende-panel-fraga arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
-
-      <div ng-repeat="kompletteringArendeListItem in arendeListItem.extraKompletteringarArenden">
-
-          <div ng-repeat="paminnelse in kompletteringArendeListItem.arende.paminnelser | orderBy:'senasteHandelse':true">
-            <div arende-paminnelse-panel panel-id="panelId" paminnelse="paminnelse" parent-view-state="parentViewState"></div>
-          </div>
-
-          <div arende-panel-header-utkast arende-list="arendeList" arende-list-item="kompletteringArendeListItem" parent-view-state="parentViewState"></div>
-
-          <div arende-panel-fraga arende-list-item="kompletteringArendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></div>
-
-      </div>
+      <arende-panel-fraga arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></arende-panel-fraga>
 
     </div>
 
