--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeaderUtkast.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeaderUtkast.directive.html
@@ -2,7 +2,7 @@
   <div class="col-xs-9">
     <div class="fraga-status-header">
 
-      <div arende-panel-header-amne arende-list-item="arendeListItem"></div>
+      <arende-panel-header-amne arende-list-item="arendeListItem"></arende-panel-header-amne>
 
       <div ng-if="arendeListItem.arende.fraga.status != 'CLOSED'">
         <h3>
