--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUser/vardperson-sekretess.infodialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUser/vardperson-sekretess.infodialog.html
@@ -1,10 +1,11 @@
 <div class="modal-header">
-  <button type="button" class="close" data-ng-click="$dismiss()"><i class="material-icons">close</i></button>
-  <h3>Du har en sekretessmarkering.</h3>
+  <button type="button" class="close" data-ng-click="$close()"><i class="material-icons">close</i></button>
+  <h3>Användning av Webcert med sekretessmarkering</h3>
 </div>
 
 <div class="modal-body">
-  <p>Att använda Webcert med en sekretessmarkering innebär:</p>
+  <wc-alert-message alert-severity="sekretess">Du har en sekretessmarkering.</wc-alert-message>
+  <p><strong>Att använda Webcert med en sekretessmarkering innebär:</strong></p>
   <ul>
     <li ng-if="!isVardAdministrator">När du signerar ett intyg kommer ditt namn och information om den vårdgivare och vårdenhet intyget är utfärdat på att vara synligt.</li>
     <li>Vid kommunikation med Försäkringskassan kring ett intyg kommer ditt namn att vara synligt.</li>
