INTYG-5343: Lagt på border vid fokus

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcToggle/wcToggle.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcToggle/wcToggle.directive.scss
@@ -63,6 +63,13 @@ wc-toggle {
     }
   }
 
+  input:focus {
+    + .slider {
+      outline: thin dotted;
+      outline-offset: 0;
+    }
+  }
+
   input:checked {
     + .slider {
       background-color: $wc-color-10;
