--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.scss
@@ -1,5 +1,6 @@
 /*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
+
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -17,32 +18,11 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-arende-panel-svar {
-  display: block;
+arende-hantera {
+  display: inline-flex;
+  align-self: flex-end;
 
-  .arende-svar {
-    margin-bottom: 18px;
-  }
-
-  textarea.form-control {
-    height: 96px;
-  }
-
-  button.btn-success {
-    margin-right: 10px;
-  }
-
-  .arende-draft-status {
-    @extend %wc-typo-07;
-    color: $wc-color-07;
-
-    > span > i {
-      font-size: 14px;
-      color: $wc-color-10;
-    }
-
-    wc-alert-message .alert {
-      @extend %wc-typo-09;
-    }
+  wc-checkbox-wrapper {
+    padding-right: 0;
   }
 }
