--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.html
@@ -1,27 +1,15 @@
 <div class="arende-panel-fraga panel-container">
   <div class="arende-block"
        ng-class="{'arende-block-handled' : arendeListItem.arende.fraga.status == 'ANSWERED', 'arende-block-fk' : (arendeListItem.arende.fraga.frageStallare | lowercase) == 'fk', 'arende-block-wc' : (arendeListItem.arende.fraga.frageStallare | lowercase) == 'wc'}">
-    <div class="arende-block-head clearfix">
-      <div class="pull-left" ng-switch="arendeListItem.arende.fraga.frageStallare | lowercase">
-        Från: <span class="arende-sender" ng-switch-when="wc"
-                    id="{{panelId}}-question-fraga-vard-aktor-namn-{{arendeListItem.arende.fraga.internReferens}}">{{arendeListItem.arende.fraga.vardaktorNamn}}</span>
-        <span ng-switch-default dynamic-label
-              key="common.arende.fragestallare.{{arendeListItem.arende.fraga.frageStallare | lowercase}}"></span>
-        <div id="{{panelId}}-fkKontakter-{{arendeListItem.arende.fraga.internReferens}}"
-             ng-repeat="kontakt in arendeListItem.arende.fraga.externaKontakter">
-          {{kontakt}}<br />
-        </div>
-      </div>
-      <!-- Fraga fran fk eller wc? -->
-      <div class="pull-right" ng-switch="arendeListItem.arende.fraga.frageStallare | lowercase">
-        <span ng-switch-when="wc">Skickat: </span> <span ng-switch-default>Mottaget: </span> <span
-          class="arende-date" id="{{panelId}}-arende-skickaddatum-{{arendeListItem.arende.fraga.internReferens}}">{{arendeListItem.arende.fraga.timestamp | date:'short'}}</span>
-      </div>
-    </div>
 
     <div class="arende-block-body" id="{{panelId}}-arende-fragetext-{{arendeListItem.arende.fraga.internReferens}}">
 
-      <div class="arende-meddelande" ng-if="arendeListItem.arende.fraga.meddelande">{{arendeListItem.arende.fraga.meddelande}}</div>
+      <div class="arende-meddelande" ng-if="arendeListItem.arende.fraga.meddelande">
+        <wc-expandable-content
+            content="arendeListItem.arende.fraga.meddelande"
+            threshold-pixel-height="60px"
+            link-dom-id="{{panelId}}-arende-fragetext-content-link-{{arendeListItem.arende.fraga.internReferens}}">
+      </div>
 
       <div class="arende-komplettera"
            id="{{panelId}}-fkKompletteringar-{{arendeListItem.arende.fraga.internReferens}}"
@@ -34,14 +22,20 @@
         </span>
 
         <!-- nya ärendehanteringen -->
-        <span ng-if="komplettering.frgId">
-          <span class="bold" dynamic-label key="{{komplettering.frgId}}"></span>
-          <div class="keep-newlines">{{komplettering.text}}</div>
-          <div><a href="" ng-click="scrollToFraga(komplettering)">Visa frågan</a></div>
-        </span>
+        <div class="arende-visa-komplettering-button" ng-if="komplettering.frgId" ng-click="scrollToFraga(komplettering)">
+          <i class="material-icons">navigate_before</i>
+          <div class="arende-visa-komplettering-text">
+            Visa kompletteringsbegäran för:
+            <div dynamic-label key="{{komplettering.frgId}}"></div>
+          </div>
+        </div>
 
       </div>
 
+    </div>
+
+    <div class="arende-svara-senast" ng-if="arendeListItem.arende.fraga.sistaDatumForSvar">
+      <i class="material-icons">date_range</i> Svara senast: {{arendeListItem.arende.fraga.sistaDatumForSvar}}
     </div>
 
   </div>
