--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.scss
@@ -1,5 +1,47 @@
 .arende-panel-fraga {
-  .keep-newlines {
+
+  display: block;
+
+  .keep-newlines, .content {
     white-space: pre-line;
+  }
+
+  .arende-svara-senast {
+    margin-top: 10px;
+    color: $wc-color-09;
+  }
+
+  .arende-visa-komplettering-button {
+    display:flex;
+    padding: 5px 10px;
+    margin-top: 5px;
+    align-items: center;
+    background-color: $wc-color-00;
+    border: 1px solid $wc-color-05;
+    border-radius: 4px;
+    color: $wc-color-09;
+    .material-icons {
+      color: $wc-color-05;
+      margin-right: 10px;
+    }
+    .arende-visa-komplettering-text {
+      flex-grow: 1;
+      div {
+        color: $wc-color-05;
+      }
+    }
+    &:hover {
+      background-color: $wc-color-21;
+      border-color: $wc-color-21;
+      color: $wc-color-00;
+      .material-icons {
+        color: $wc-color-00;
+      }
+      .arende-visa-komplettering-text {
+        div {
+          color: $wc-color-00;
+        }
+      }
+    }
   }
 }
