--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.scss
@@ -17,32 +17,36 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-arende-panel-svar {
+arende-panel-header {
   display: block;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: solid 1px $wc-color-15;
 
-  .arende-svar {
-    margin-bottom: 18px;
-  }
+  > div {
+    display: flex;
 
-  textarea.form-control {
-    height: 96px;
-  }
-
-  button.btn-success {
-    margin-right: 10px;
-  }
-
-  .arende-draft-status {
-    @extend %wc-typo-07;
-    color: $wc-color-07;
-
-    > span > i {
-      font-size: 14px;
-      color: $wc-color-10;
+    .arende-header-icon {
+      color: $wc-color-09;
+      margin-right: 14px;
+      line-height: 40px;
     }
 
-    wc-alert-message .alert {
-      @extend %wc-typo-09;
+    .arende-header-middle {
+      @extend %wc-typo-07;
+      flex-grow: 1;
     }
+
+    .arende-header-right {
+      display: flex;
+      flex-direction: column;
+      .arende-header-date {
+        @extend %wc-typo-07;
+        color: $wc-color-09;
+        margin-top: auto;
+      }
+    }
+
   }
+
 }
