--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/vidarebefordra/arendeVidarebefordra.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/vidarebefordra/arendeVidarebefordra.directive.html
@@ -1,10 +1,12 @@
 <div class="row">
   <div ng-if="showVidarebefordra()">
+
+    <span ng-if="arendeListItem.arende.fraga.vidarebefordrad">Vidarebefordrad</span>
+<!--
     <div class="col-xs-8"></div>
     <div wc-authority="VIDAREBEFORDRA_FRAGASVAR" class="col-xs-4 form-inline arende-panel__vidarebefordra-placement"
          ng-show="!parentViewState.intygProperties.isRevoked">
       <div>
-        <!--  fraga.status header -->
         <button type="button" id="{{panelId}}-vidarebefordraEjHanterad" class="btn"
                 ng-class="{'btn-secondary': !arendeListItem.arende.fraga.vidarebefordrad, 'btn-default btn-secondary' : arendeListItem.arende.fraga.vidarebefordrad}"
                 title="Skicka mejl med en länk till intyget för att informera den som ska hantera frågan-svaret."
@@ -25,5 +27,6 @@
         </wc-checkbox-wrapper>
       </div>
     </div>
+-->
   </div>
 </div>
