--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -83,6 +83,8 @@
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeIntygNotSentMessage/wcArendeIntygNotSentMessage.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoAdministrativaFragorMessage/wcArendeNoAdministrativaFragorMessage.directive.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoKompletteringarMessage/wcArendeNoKompletteringarMessage.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss';
   @import 'components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss';
   @import 'components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.scss';
