--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
@@ -1,7 +1,6 @@
 <div class="card" id="arende-{{panelId}}-{{arendeListItem.arende.fraga.internReferens}}">
 
-    <arende-panel-svar ng-if="!arendeListItem.isKomplettering()"
-                       arende-list="arendeList" arende-list-item="arendeListItem"
+    <arende-panel-svar arende-list="arendeList" arende-list-item="arendeListItem"
                        panel-id="{{panelId}}" parent-view-state="parentViewState">
     </arende-panel-svar>
 
