--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/wc-page-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/wc-page-header.scss
@@ -22,6 +22,7 @@
   padding: 20px 0px 32px 0;
   background-color: $wc-color-00;
   box-shadow: 0 2px 4px 0 $black_12;
+  border-bottom: 1px solid $wc-color-27;
 
   .page-heading1 {
     @extend %wc-typo-04;
