INTYG-5727: Döljer påminnelse, svara senast på kompletterad fråga. Ändrade till knapp för visa fråga.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
@@ -10,7 +10,7 @@
     <arende-vidarebefordra arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></arende-vidarebefordra>
 
     <!-- list of paminnelser -->
-    <div ng-repeat="paminnelse in arendeListItem.arende.paminnelser | orderBy:'+senasteHandelse'">
+    <div ng-if="arendeListItem.arende.fraga.status != 'CLOSED'" ng-repeat="paminnelse in arendeListItem.arende.paminnelser | orderBy:'+senasteHandelse'">
         <arende-paminnelse paminnelse="paminnelse" parent-view-state="parentViewState"></arende-paminnelse>
     </div>
 
