--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.scss
@@ -1,5 +1,7 @@
 ue-component-toggler {
+  display: block;
+
   .toggled-components-container {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
   }
 }
